--- a/StarUML-FileFormat/StarUML-FileFormat.csproj
+++ b/StarUML-FileFormat/StarUML-FileFormat.csproj
@@ -4,13 +4,13 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>DVDpro.StarUML.FileFormat</RootNamespace>
     <AssemblyName>DVDpro.StarUML.FileFormat</AssemblyName>
-    <Version>0.1.1</Version>
+    <Version>0.1.2</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Description>Read and write StarUML file format out of StartUML tool.</Description>
     <RepositoryType>GIT</RepositoryType>
     <RepositoryUrl></RepositoryUrl>
     <PackageProjectUrl>https://github.com/DVDpro/StarUML-fileformat</PackageProjectUrl>
-    <PackageReleaseNotes />
+    <PackageReleaseNotes>tags node and basic generator support</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
